--- a/.env.local
+++ b/.env.local
@@ -2,5 +2,5 @@ PORT=5000
 MY_EMAIL=yourMY_EMAIL
 CLIENT_ID=yourCLIENT_ID
 CLIENT_SECRET=yourCLIENT_SECRET
-REDIRECT_URI=yourREDIRECT_URI
+REDIRECT_URI=https://developers.google.com/oauthplayground
 REFRESH_TOKEN=yourREFRESH_TOKEN
